# macro-recorder

./: Cargo.toml  test
src/: common.rs  main.rs  play.rs  record.rs
