[package]
name = "macro-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"] }
ctrlc = "3.4.4"
evdev-rs = "0.6.1"
inquire = "0.7.5"
nix = { version = "0.29.0", features = ["user", "ioctl", "fs"] }
speedy = "0.8.7"
uinput = "0.1.3"
uinput-sys = "0.1.7"
